# engagement-experiment-data-collection

./: MSBandStreamer_1.0.0.0_x86.msix  README.md  lsl.py  orchestrator.py
App3/: App3.csproj  App3.sln  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest
App3/Properties/: AssemblyInfo.cs
Beam/: README.md  beam.py  beam_tracking_log.csv
Beam/beam_eye_tracker_sdk/beam_eye_tracker_sdk-2.1.0/: README.md
Beam/beam_eye_tracker_sdk/beam_eye_tracker_sdk-2.1.0/cpp/samples/: bet_sample_utils.h  build_samples.bat
Beam/beam_eye_tracker_sdk/beam_eye_tracker_sdk-2.1.0/docs/: searchindex.js
Beam/beam_eye_tracker_sdk/beam_eye_tracker_sdk-2.1.0/docs/_sources/: index.rst.txt
Beam/beam_eye_tracker_sdk/beam_eye_tracker_sdk-2.1.0/docs/basics/: overview.html
Beam/beam_eye_tracker_sdk/beam_eye_tracker_sdk-2.1.0/docs/features/: features.html  foveated_rendering.html  game_immersive_hud.html
Beam/beam_eye_tracker_sdk/beam_eye_tracker_sdk-2.1.0/docs/info/: changelog.html
Beam/beam_eye_tracker_sdk/beam_eye_tracker_sdk-2.1.0/include/eyeware/: beam_eye_tracker_c.h
Beam/beam_eye_tracker_sdk/beam_eye_tracker_sdk-2.1.0/lib/win64/: beam_eye_tracker_client_MT.lib
Beam/beam_eye_tracker_sdk/beam_eye_tracker_sdk-2.1.0/unity/beam-eye-tracker-plugin/: CHANGELOG.md  README.md
Data_Collection/: README.md  lsl.py
Data_Collection/Beam/: beam.py
Data_Collection/Beam/beam_eye_tracker_sdk/beam_eye_tracker_sdk-2.1.0/: version.json
Data_Collection/Beam/beam_eye_tracker_sdk/beam_eye_tracker_sdk-2.1.0/cpp/samples/: CMakeLists.txt  bet_auto_start_beam.cpp
Data_Collection/Beam/beam_eye_tracker_sdk/beam_eye_tracker_sdk-2.1.0/cpp/samples/data_access_methods/: bet_async_data_access.cpp  bet_polling_data_access.cpp
Data_Collection/Beam/beam_eye_tracker_sdk/beam_eye_tracker_sdk-2.1.0/cpp/samples/game_engine_integration/: Readme.md  main.cpp
Data_Collection/MSBand/: BandReceiver.py  MSBandStreamer_1.0.0.0_x64.msix
Data_Collection/Muse/: muse_osc.py
Data_Collection/OmniBuds/: pyproject.toml  stream_omnibuds_lsl.py
Data_Collection/OmniBuds/omnibuds/: __init__.py  _version.py  base.py  conf.py  ids.py  omnibuds.py
Data_Collection/Polar/: Polar2LSL.py
Data_Collection/User_Ratings/: user_rate.py
Data_Collection/Video_Playback/: play_video_lsl.py
Data_Collection/Video_Playback_User_Rating/: play_video_lsl.py
Data_Processing/: 01_Ingestion.ipynb  a.py  clean_muse.m
Data_Processing/data/: muse_2_mins.xdf  muse_blink_and_switch_rating.xdf  muse_blinkevery5_30.xdf  muse_osc.xdf  muse_random_blink.xdf  muse_sample.xdf  no_notch_test_muse.xdf
LSL_XDFs/: analyze_xdf.py  sub-P001_ses-S001_task-Default_run-001_eeg.xdf
MSBand/: BandReceiver.py  README.md
MSBand/MSBandStreamer/: App.xaml  App.xaml.cs  MSBandStreamer.sln  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest
MSBandStreamer/: MSBandStreamer.csproj
MSBandStreamer/Properties/: AssemblyInfo.cs
Muse/: muse.py
OmniBuds/: requirements.txt  stream_omnibuds_lsl.py
OmniBuds/omnibuds/: com.py
OmniBuds/omnibuds.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Polar/: Polar2LSL.py
User_Ratings/: user_rate.py
conda_env_mac/: environment.yaml
data/: analyze_xdf.py  omnibuds_20_minutes.xdf  test2.xdf  test3.xdf  test_all_omnibuds.xdf
data/sub-P001/ses-S001/eeg/: sub-P001_ses-S001_task-Default_run-001_eeg.xdf  sub-P001_ses-S001_task-Default_run-001_eeg_old1.xdf  sub-P001_ses-S001_task-Default_run-001_eeg_old2.xdf
(+69 files in other folders)
